# EquipoDeFutbol

./: CMakeLists.txt  Defensa.cpp  Defensa.h  Delantero.cpp  Delantero.h  EquipoFutbol.cpp  EquipoFutbol.h  Jugador.cpp  Jugador.h  Mediocampo.cpp  Mediocampo.h  Persona.cpp  Persona.h  Portero.cpp  Portero.h  Tecnico.cpp  Tecnico.h  main.cpp
